fixed broken linkedin link

--- a/work.html
+++ b/work.html
@@ -145,7 +145,7 @@
     <ul class="social-links">
         <div>
           <li>
-            <a href="www.linkedin.com/in/kendrarreynolds" target="_blank" title="LinkedIn Profile"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/kendrarreynolds" target="_blank" title="LinkedIn Profile"><i class="fa-brands fa-linkedin"></i></a>
           </li>
         </div>
         <div>
