--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <ul class="social-links">
           <div>
             <li>
-              <a href="www.linkedin.com/in/kendrarreynolds" target="_blank" title="LinkedIn Profile"><i class="fa-brands fa-linkedin"></i></a>
+              <a href="http://www.linkedin.com/in/kendrarreynolds" target="_blank" title="LinkedIn Profile"><i class="fa-brands fa-linkedin"></i></a>
             </li>
           </div>
           <div>
