improved some content and mobile responsiveness

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,9 @@
     </div>
   </nav>
   <div class="sup-heading text-center mb-2">
+    <div class="colored-text">
     <i class="fa-regular fa-paper-plane h1-supplement-page mb-2"></i>
+    </div>
     <h1 class="h1-supplement-page">
       Get In Touch</h1>
   </div>
@@ -56,17 +58,17 @@
       <div class="col-md-2">
       </div>
       <div class="col-md-8">
+        <p class="section-paragraphs contact-paragraph">
+          Have a design you need put into code?
+        </p>
         <p class="section-paragraphs contact-paragraph mt-3">
           Got an idea for a project you'd like to run by me?</p>
-            <p class="section-paragraphs contact-paragraph">
-          Have a design you need put into code?
-          </p>
           <p class="section-paragraphs contact-paragraph">
-          Need a website built or need help on your existing one?
+          Need a website built or want help on your existing one?
           </p>
           <div class="pb-5">
             <p class="section-paragraphs contact-paragraph">
-          Or perhaps you are a fellow developer that would like to collaborate on a project?
+          Or perhaps you're an industry professional that would like team up on a project?
           </p>
           </div>
 
