--- a/work.html
+++ b/work.html
@@ -91,10 +91,10 @@
     <div class="col-lg-6 mb-5">
       <h2 class="work-project-headings text-center">Typing Test App</h2>
     
-      <p class="m-2 project-paragraph p-2"> This typing speed and accuracy test web application uses vanilla
-        JavaScript to interact with the user. The test allows for three different options with a countdown timer
-        that begins after clicking start. The app keeps tracks user's keystrokes using an event handler,
-        and highlights typing errors in real time. </p>
+      <p class="m-2 project-paragraph p-2"> This typing speed and accuracy test web app allows for three 
+        different test time options with a countdown timer beginning after clicking start. Using a JavaScript
+        event handler, the app tracks the user's keystrokes to calculate speed, accuracy, as well as interact
+        with the user by highlighing typing errors in real time.</p>
       <div class="project-links mt-3 mb-5">
         <div class="site-link">
           <a href="https://lustrous-alpaca-56c0d5.netlify.app/" target="_blank" class="btn-branding-alt mt-3" title="See the typing test app">
