adjusted the scroll behavior of icon on id projects-homepage and did row-reverse on work page

--- a/about.html
+++ b/about.html
@@ -51,63 +51,69 @@
       </div>
   </div>
   </nav>
-
-  <div class="container">
-    <div class="row main-row-about mt-5">
-      <div class="col-md-7 text-left">
-        <h1 class="h1-supplement-page text-left ps-3 mt-5">A Little About Me</h1>
-        <h2 class="text-left mt-3 about-intro ps-3">Hi, my name is Kendra Reynolds...</h2>
-        <p class="text-left section-paragraphs ps-3 mb-4">I'm a web developer with a passion for front-end development
-          and design. As a third year student at <a href="https://www.wgu.edu" tartget="_blank" title="Go to WGU homepage"
-            class="links-in-paragraph">Western Governor's University</a> pursuing a degree in
-          <a href="https://www.wgu.edu/online-it-degrees/software-development-bachelors-program.html" target="_blank" title="Learn about WGU's software development program"
-            class="links-in-paragraph">software development</a>, I aspire to grow my career in a direction that
-          allows me to channel my creativity through creating software that is not only
-          aesthetically pleasing but also engaging.
-        </p>
-        <div class="button-wrapper ps-3 page-bottom">
-          <a href="/work.html" class="btn-branding" title="See Kendra's work"> 
-            See My Work
-          </a>
+</div>
+    <div class="container">
+      <div class="row main-row-about mt-5">
+        <div class="col-md-7 text-left">
+          <h1 class="h1-supplement-page text-left ps-3 mt-5">A Little About Me</h1>
+          <h2 class="text-left mt-3 about-intro ps-3">Hi, my name is Kendra Reynolds...</h2>
+          <p class="text-left section-paragraphs ps-3 mb-4">I'm a web developer with a passion for front-end development
+            and design. As a third year student at <a href="https://www.wgu.edu" tartget="_blank"
+              title="Go to WGU homepage" class="links-in-paragraph">Western Governor's University</a> pursuing a degree
+            in
+            <a href="https://www.wgu.edu/online-it-degrees/software-development-bachelors-program.html" target="_blank"
+              title="Learn about WGU's software development program" class="links-in-paragraph">software
+              development</a>, I aspire to grow my career in a direction that
+            allows me to channel my creativity through creating software that is not only
+            aesthetically pleasing but also engaging.
+          </p>
+          <div class="button-wrapper ps-3 page-bottom">
+            <a href="/work.html" class="btn-branding" title="See Kendra's work">
+              See My Work
+            </a>
+          </div>
         </div>
-      </div>
-      <div class="col-md-5 ">
-        <div class=" img-wrapper">
-          <img src="/images/kendra-emoji.png" alt="emoji with laptop waving hi" class="about-kendra-img img-fluid">
+        <div class="col-md-5 ">
+          <div class=" img-wrapper">
+            <img src="/images/kendra-emoji.png" alt="emoji with laptop waving hi" class="about-kendra-img img-fluid">
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <footer>
-    <div class=" text-center">
-      <ul class="social-links">
-        <div>
-          <li>
-            <a href="https://www.linkedin.com/in/kendrarreynolds" target="_blank" title="LinkedIn Profile"><i class="fa-brands fa-linkedin"></i></a>
-          </li>
-        </div>
-        <div>
-          <li>
-            <a href="https://twitter.com/kendracodesio" target="_blank" title="Twitter Profile"><i class="fa-brands fa-twitter"></i></a>
-          </li>
-        </div>
-        <div>
-          <li>
-            <a href="https://github.com/kendracodesio" target="_blank" title="Github Profile"><i class="fa-brands fa-github"></i></a>
-          </li>
-        </div>
-        <div>
-          <li>
-            <a href="mailto:kendracodesio@gmail.com" target="_blank" title="Email"><i class="fa-solid fa-envelope"></i></a>
-          </li>
-        </div>
+    <footer>
+      <div class=" text-center">
+        <ul class="social-links">
+          <div>
+            <li>
+              <a href="https://www.linkedin.com/in/kendrarreynolds" target="_blank" title="LinkedIn Profile"><i
+                  class="fa-brands fa-linkedin"></i></a>
+            </li>
+          </div>
+          <div>
+            <li>
+              <a href="https://twitter.com/kendracodesio" target="_blank" title="Twitter Profile"><i
+                  class="fa-brands fa-twitter"></i></a>
+            </li>
+          </div>
+          <div>
+            <li>
+              <a href="https://github.com/kendracodesio" target="_blank" title="Github Profile"><i
+                  class="fa-brands fa-github"></i></a>
+            </li>
+          </div>
+          <div>
+            <li>
+              <a href="mailto:kendracodesio@gmail.com" target="_blank" title="Email"><i
+                  class="fa-solid fa-envelope"></i></a>
+            </li>
+          </div>
         </ul>
-        </div>
-    <p class="text-center">
-      This website was coded by Kendra Reynolds and is <a class="links-in-paragraph" target="_blank" title="see the source code"
-        href="https://github.com/kendracodesio/my-portfolio">open-sourced</a>.
-    </p>
-  </footer>
+      </div>
+      <p class="text-center">
+        This website was coded by Kendra Reynolds and is <a class="links-in-paragraph" target="_blank"
+          title="see the source code" href="https://github.com/kendracodesio/my-portfolio">open-sourced</a>.
+      </p>
+    </footer>
 
 </body>
 
