--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta description="Kendra Reynolds is a front-end web developer based in Los Angeles, CA.
   Kendra is available for hire to and can assist you in developing a brand new website, help fix
-  bugs with your exisiting one, or simply convert your graphic design into HTML/CSS code." >
+  bugs with your exisiting one, or simply convert your graphic design into HTML/CSS code.">
   <title>Front-End Developer | Kendra Reynolds</title>
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -49,89 +49,100 @@
       </div>
     </div>
   </nav>
+
   <div class="intro">
     <h1 class="text-center">Hello, I'm Kendra</h1>
     <h2 class="text-center mt-3">
       Front-end developer based in Los Angeles
     </h2>
-    <a href="#projects-homepage" class="down-icon" title="scrolls down to main content"><i class="fa-solid fa-angles-down"></i></a>
+    <p>
+      <a href="#projects-homepage" class="down-icon" title="scrolls down to main content"><i
+          class="fa-solid fa-angles-down"></i></a>
+    </p>
+    
   </div>
-  <div id="projects-homepage">
-    <h3 class="featured text-center mt-5 mb-3">
-      Featured Projects
-    </h3>
-    <div class="container">
-      <div class="row mb-5">
-        <div class="col-lg-4 text-center">
-          <h4 class="mt-2 project-heading">
-            Weather App
-          </h4>
-          <img class="project-image d-flex rounded" src="/images/vanilla-js-weather-app.png"
-            alt="weather app">
-          <div class="button-wrapper p-3">
-            <a href="/work.html#weather-app" class="btn-branding" title="More About Weather App">
-              Learn More
-            </a>
-          </div>
-        </div>
-        <div class="col-lg-4 text-center">
-          <h4 class="mt-2 project-heading">
-            Typing Test App
-          </h4>
-          <img class="project-image d-flex rounded" src="/images/Typing-Speed-Test.png" alt="typing test app">
-          <div class="button-wrapper p-3">
-            <a href="work.html#type-test-app" class="btn-branding" title="More About Typing Test App">
-              Learn More
-            </a>
-          </div>
-        </div>
-        <div class="col-lg-4 text-center project-col">
-          <h4 class="mt-2 project-heading">
-            Landing Page
-          </h4>
-          <img class="project-image d-flex rounded" src="/images/coffeelicious-landing-page.png"
-            alt="landing page for coffelicious recipe ebook">
+<div id="projects-homepage"></div>
 
-          <div class="button-wrapper p-3 mb-5">
-            <a href="work.html#landing-page" class="btn-branding" title="More About Landing Page Project">
-              Learn More
-            </a>
-          </div>
+  <h3 class="featured text-center mt-5 mb-3">
+    Featured Projects
+  </h3>
+
+  <div class="container">
+
+    <div class="row mb-5">
+      <div class="col-lg-4 text-center">
+        <h4 class="mt-2 project-heading">
+          Weather App
+        </h4>
+        <img class="project-image d-flex rounded" src="/images/vanilla-js-weather-app.png" alt="weather app">
+        <div class="button-wrapper p-3">
+          <a href="/work.html#weather-app" class="btn-branding" title="More About Weather App">
+            Learn More
+          </a>
+        </div>
+      </div>
+      <div class="col-lg-4 text-center">
+        <h4 class="mt-2 project-heading">
+          Typing Test App
+        </h4>
+        <img class="project-image d-flex rounded" src="/images/Typing-Speed-Test.png" alt="typing test app">
+        <div class="button-wrapper p-3">
+          <a href="work.html#type-test-app" class="btn-branding" title="More About Typing Test App">
+            Learn More
+          </a>
+        </div>
+      </div>
+      <div class="col-lg-4 text-center project-col">
+        <h4 class="mt-2 project-heading">
+          Landing Page
+        </h4>
+        <img class="project-image d-flex rounded" src="/images/coffeelicious-landing-page.png"
+          alt="landing page for coffelicious recipe ebook">
+
+        <div class="button-wrapper p-3 mb-5">
+          <a href="work.html#landing-page" class="btn-branding" title="More About Landing Page Project">
+            Learn More
+          </a>
         </div>
       </div>
     </div>
 
+  </div>
     <footer>
       <div class=" text-center">
         <ul class="social-links">
           <div>
             <li>
-              <a href="http://www.linkedin.com/in/kendrarreynolds" target="_blank" title="LinkedIn Profile"><i class="fa-brands fa-linkedin"></i></a>
+              <a href="http://www.linkedin.com/in/kendrarreynolds" target="_blank" title="LinkedIn Profile"><i
+                  class="fa-brands fa-linkedin"></i></a>
             </li>
           </div>
           <div>
             <li>
-              <a href="https://twitter.com/kendracodesio" target="_blank"  title="Twitter Profile"><i class="fa-brands fa-twitter"></i></a>
+              <a href="https://twitter.com/kendracodesio" target="_blank" title="Twitter Profile"><i
+                  class="fa-brands fa-twitter"></i></a>
             </li>
           </div>
           <div>
             <li>
-              <a href="https://github.com/kendracodesio" target="_blank"  title="Github Profile"><i class="fa-brands fa-github"></i></a>
+              <a href="https://github.com/kendracodesio" target="_blank" title="Github Profile"><i
+                  class="fa-brands fa-github"></i></a>
             </li>
           </div>
           <div>
             <li>
-              <a href="mailto:kendracodesio@gmail.com" target="_blank"  title="Email"><i class="fa-solid fa-envelope"></i></a>
+              <a href="mailto:kendracodesio@gmail.com" target="_blank" title="Email"><i
+                  class="fa-solid fa-envelope"></i></a>
             </li>
           </div>
         </ul>
       </div>
       <p class="text-center">
-        This website was coded by Kendra Reynolds and is <a class="links-in-paragraph" target="_blank" title="see the source code"
-         href="https://github.com/kendracodesio/my-portfolio">open-sourced</a>.
+        This website was coded by Kendra Reynolds and is <a class="links-in-paragraph" target="_blank"
+          title="see the source code" href="https://github.com/kendracodesio/my-portfolio">open-sourced</a>.
       </p>
     </footer>
-  </div>
+
 
 </body>
 
