--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <div class="container">
 
     <div class="row mb-5">
-      <div class="col-lg-4 text-center">
+      <div class="col-lg-4 text-center project-col">
         <h4 class="mt-2 project-heading">
           Weather App
         </h4>
@@ -81,7 +81,7 @@
           </a>
         </div>
       </div>
-      <div class="col-lg-4 text-center">
+      <div class="col-lg-4 text-center project-col">
         <h4 class="mt-2 project-heading">
           Typing Test App
         </h4>
