added bounce animation to homepage and added color to headings

--- a/about.html
+++ b/about.html
@@ -55,8 +55,8 @@
     <div class="container">
       <div class="row main-row-about mt-5">
         <div class="col-md-7 text-left">
-          <h1 class="h1-supplement-page text-left ps-3 mt-5">A Little About Me</h1>
-          <h2 class="text-left mt-3 about-intro ps-3">Hi, my name is Kendra Reynolds...</h2>
+          <h1 class="h1-supplement-page text-left ps-3 mt-5">A Little <span class="colored-text">About</span> Me.</h1>
+          <h2 class="text-left mt-3 about-intro ps-3">Hi, my name is <span class="colored-text">Kendra Reynolds</span>...</h2>
           <p class="text-left section-paragraphs ps-3 mb-4">I'm a web developer with a passion for front-end development
             and design. As a third year student at <a href="https://www.wgu.edu" tartget="_blank"
               title="Go to WGU homepage" class="links-in-paragraph">Western Governor's University</a> pursuing a degree
