--- a/contact.html
+++ b/contact.html
@@ -47,11 +47,11 @@
     </div>
   </nav>
   <div class="sup-heading text-center mb-2">
-    <div class="colored-text">
+    <div >
     <i class="fa-regular fa-paper-plane h1-supplement-page mb-2"></i>
     </div>
     <h1 class="h1-supplement-page">
-      Get In Touch</h1>
+      Get In <span class="colored-text">Contact</span>.</h1>
   </div>
   <div class="container">
     <div class="row text-center">
