--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/1179b3bac5.js" crossorigin="anonymous"></script>
+  <link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.css" rel="stylesheet">
 
   <link rel="stylesheet" href="/style/portfolio.css" type="text/css">
 </head>
@@ -51,13 +52,13 @@
   </nav>
 
   <div class="intro">
-    <h1 class="text-center">Hello, I'm Kendra</h1>
+    <h1 class="text-center">Hello, I'm <span class="colored-text">Kendra</span>.</h1>
     <h2 class="text-center mt-3">
-      Front-end developer based in Los Angeles
+      Front-end developer based in Los Angeles.
     </h2>
     <p>
       <a href="#projects-homepage" class="down-icon" title="scrolls down to main content"><i
-          class="fa-solid fa-angles-down"></i></a>
+          class="fa-solid fa-angles-down bounce"></i></a>
     </p>
     
   </div>
