--- a/work.html
+++ b/work.html
@@ -49,7 +49,7 @@
   </div>
 </nav>
 <div id="weather-app">
-<h1 class="h1-supplement-page text-center sup-heading mt-5 mb-5">What I've Done</h1>
+<h1 class="h1-supplement-page text-center sup-heading mt-5 mb-5"> The <span class="colored-text">Work </span>I've Done.</h1>
 </div>
 <div class="container">
   <div class="row shadow rounded row-odd ">
@@ -97,12 +97,12 @@
         with the user by highlighing typing errors in real time.</p>
       <div class="project-links mt-3 mb-5">
         <div class="site-link">
-          <a href="https://lustrous-alpaca-56c0d5.netlify.app/" target="_blank" class="btn-branding-alt mt-3" title="See the typing test app">
+          <a href="https://lustrous-alpaca-56c0d5.netlify.app/" target="_blank" class="btn-branding mt-3" title="See the typing test app">
             Visit Site
           </a>
         </div>
         <div class="git-link">
-          <a href="https://github.com/kendracodesio/typing-test-app" target="_blank" class="btn-branding-alt mt-3" title="See the typing test code">
+          <a href="https://github.com/kendracodesio/typing-test-app" target="_blank" class="btn-branding mt-3" title="See the typing test code">
             View Code
           </a>
             <div id="landing-page"></div>
