adjusted text alignment in work and contact pages

--- a/work.html
+++ b/work.html
@@ -60,20 +60,21 @@
           GitHub</h5>
     </div>
     <div class="col-lg-6 mb-5">
-      <h2 class="work-project-headings text-center ">Weather App</h2>
+      <h2 class="work-project-headings text-center ms-3">Weather App</h2>
   
       <p class="m-2  project-paragraph p-2">One of my favorite projects I've worked on to date was this weather
-        web app that uses the Open Weather API.
+        web app that uses an API from <a href="https://openweathermap.org/" target="_blank" class="links-in-paragraph" title="OpenWeatherMap">
+        OpenWeatherMap</a>.
         Using JavaScript with Axios, whenever a city search is made, a request is made to
         the API server. If a match is found, the weather data is retrieved from the third-party server and injected
         into the site.</p>
-      <div class="project-links mt-3 mb-5">
-        <div class="site-link">
+      <div class="project-links mt-4 mb-5">
+        <div class="site-link ms-3">
           <a href="https://lucky-torte-cf570f.netlify.app" target="_blank" class="btn-branding mt-3" title="See the weather app site">
             Visit Site
           </a>
         </div>
-        <div class="git-link">
+        <div class="git-link ms-3">
           <a href="https://github.com/kendracodesio/weather-app" target="_blank" class="btn-branding mt-3" title="See the weather app code">
             View Code
           </a>
@@ -89,19 +90,19 @@
       </h5>
     </div>
     <div class="col-lg-6 mb-5">
-      <h2 class="work-project-headings text-center">Typing Test App</h2>
+      <h2 class="work-project-headings text-center ms-3">Typing Test App</h2>
     
       <p class="m-2 project-paragraph p-2"> This typing speed and accuracy test web app allows for three 
         different test time options with a countdown timer beginning after clicking start. Using a JavaScript
         event handler, the app tracks the user's keystrokes to calculate speed, accuracy, as well as interact
         with the user by highlighing typing errors in real time.</p>
-      <div class="project-links mt-3 mb-5">
-        <div class="site-link">
+      <div class="project-links mt-4 mb-5">
+        <div class="site-link ms-3">
           <a href="https://lustrous-alpaca-56c0d5.netlify.app/" target="_blank" class="btn-branding mt-3" title="See the typing test app">
             Visit Site
           </a>
         </div>
-        <div class="git-link">
+        <div class="git-link ms-3">
           <a href="https://github.com/kendracodesio/typing-test-app" target="_blank" class="btn-branding mt-3" title="See the typing test code">
             View Code
           </a>
@@ -117,20 +118,20 @@
     </h5>
     </div>
     <div class="col-lg-6 mb-5 ">
-      <h2 class="work-project-headings text-center">Landing Page</h2>
+      <h2 class="work-project-headings text-center ms-3">Landing Page</h2>
       
       <p class="m-2  project-paragraph p-2"> One of the first projects I created was this simple landing page for a
         fictitious coffee recipe e-book. I implemented an 'order now' button that utilizes JavaScript prompting the user
         for their
         name and email address and ensures they are valid. The product isn't real so
         feel free to test it out using fake, incomplete, or missing information!</p>
-      <div class="project-links mt-3">
-        <div class="site-link">
+      <div class="project-links mt-4">
+        <div class="site-link ms-3">
           <a href="https://remarkable-marigold-83198c.netlify.app/" target="_blank" class="btn-branding mt-3" title="See the landing page">
             Visit Site
           </a>
         </div>
-        <div class="git-link">
+        <div class="git-link ms-3">
           <a href="https://github.com/kendracodesio/coffeelicious-landing-page" target="_blank"
             class="btn-branding mt-3" title="See the landing page code">
             View Code
