added animation to homepage

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
   </nav>
 
   <div class="intro">
-    <h1 class="text-center">Hello, I'm <span class="colored-text">Kendra</span>.</h1>
-    <h2 class="text-center mt-3">
+    <h1 class="text-center fadeInDown">Hello, I'm <span class="colored-text">Kendra</span>.</h1>
+    <h2 class="text-center fadeInUp mt-3 mb-5">
       Front-end developer based in Los Angeles.
     </h2>
     <p>
-      <a href="#projects-homepage" class="down-icon" title="scrolls down to main content"><i
-          class="fa-solid fa-angles-down bounce"></i></a>
+      <a href="#projects-homepage" class="down-icon fadeIn" title="scrolls down to main content"><i
+          class="fa-solid fa-angles-down bounce "></i></a>
     </p>
     
   </div>
